# stts

./: .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  bump_version.py  changelog.md  index.html  nlp2cmd_analysis.md  nlp2cmd_decision_tree_analysis.md  nodejs.functions.toon  package.json  project.sh  pyproject.toml  python.functions.toon  stts  stts.mjs  todo.md
.github/workflows/: ci.yml
articles/: 2026-01-27-stts-voice-shell-wrapper.md
docs/: README.md  benchmark_report.md  core_pipeline_next_steps.md  e2e_tests.md  stt_providers.md  tts_providers.md
examples/: README.md  bench_metrics.py  benchmark.sh  daemon_nlp2cmd.sh  e2e_all.sh  e2e_deepgram.sh  e2e_offline.sh  e2e_pipeline.sh  e2e_streaming.sh  e2e_stt.sh  e2e_tts.sh  nlp2cmd_placeholder.sh  real_cmd_samples.sh
nodejs/: .env.example  Dockerfile  Makefile  README.md  stts.mjs
nodejs/tests/: docker_test.sh
project/: README.md  analysis.toon  context.md  evolution.toon  project.toon  prompt.txt
python/: .env.example  Dockerfile  Makefile  README.md  stts
python/scripts/: generate_samples.sh
python/stts_core/: __init__.py  audio.py  cli.py  command_handlers.py  config.py  daemon_handlers.py  download_utils.py  nlp2cmd_client.py  pipeline.py  pipeline_helpers.py  pipeline_utils.py  providers.py  registry.py  runtime.py  safety.py  shell.py  shell_utils.py  text.py  wake_word.py
python/stts_core/providers/: __init__.py
python/stts_core/providers/stt/: __init__.py  coqui.py  deepgram.py  faster_whisper.py  picovoice.py  vosk.py  whisper_cpp.py
python/stts_core/providers/tts/: __init__.py  coqui.py  espeak.py  festival.py  flite.py  kokoro.py  piper.py  rhvoice.py  (+2 more)
python/tests/: conftest.py  docker_test.sh  test_bench_metrics.py  test_e2e_cli.py  test_functional.py  test_nlp2cmd_client.py  test_providers.py  test_shell_core.py
scripts/: nlp2cmd_analysis.sh  test_docker_all.sh
