[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stts"
version = "0.1.7"
description = "Universal STT/TTS Shell Wrapper"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "Tom Sapletta" }]
keywords = ["stt", "tts", "cli"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
]

[tool.setuptools]
packages = []
script-files = ["python/stts"]
